<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RoadMapActivity">

    <group>
        <item
            android:id="@+id/roadMapVaxToStkItem"
            android:title="@string/road_map_vax_to_stk"
            app:showAsAction="collapseActionView" />

        <item
            android:id="@+id/roadMapVaxToCphItem"
            android:title="@string/road_map_vax_to_cph"
            app:showAsAction="collapseActionView" />

        <item
            android:id="@+id/roadMapVaxToOdsItem"
            android:title="@string/road_map_vax_to_ods"
            app:showAsAction="collapseActionView" />

    </group>
</menu>