<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="70dp"
    tools:context=".WeatherActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:text="@string/weather_date"
            android:textSize="22dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/weatherDateTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="5dp"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:text="@string/weather_time"
            android:textSize="22dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/weatherTimeTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="5dp"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:text="@string/weather_temp"
            android:textSize="22dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/weatherTempTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="5dp"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:text="@string/weather_wind"
            android:textSize="22dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/weatherWindTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="5dp"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:text="@string/weather_rain"
            android:textSize="22dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/weatherRainTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="5dp"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:text="@string/weather_weather"
            android:textSize="22dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/weatherImageView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="-140dp" />
    </LinearLayout>
</LinearLayout>